package person;

public abstract class Person {
    public String name;

    public abstract String whoyouare();
}
